# dashboard

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
agent/: __init__.py
agent/assets/: custom.css
agent/backend/: agent.py  data.py  env_wo_resp.py  load.py  loss.py  metric_callbacks.py  models.py  policy.py  reward.py  utils.py
agent/checkpoints/checkpoint_009500/: .tune_metadata  algorithm_state.pkl  rllib_checkpoint.json
agent/checkpoints/checkpoint_009500/policies/default_policy/: policy_state.pkl
agent/checkpoints/checkpoint_010000/: .tune_metadata  algorithm_state.pkl  rllib_checkpoint.json
agent/checkpoints/checkpoint_010000/policies/default_policy/: policy_state.pkl
agent/dashboard/: __init__.py  agent.py  agent_training.py  data.py  demo.py  inference.py  testing.py  training.py
agent/data/: all_load_mpa_cpu_and_performance_without_average_payten_with_response.csv  averaged_full_state_data.csv  output_browse_300_company_data_constant_heap.csv
agent/environments/: env.py
agent/public/: training.drawio
test/: all_load_mpa_cpu_and_performance_without_average.csv  dashboard.py  env.py
test/extracted_files/case5/: .tune_metadata  algorithm_state.pkl  rllib_checkpoint.json
test/extracted_files/case5/policies/default_policy/: policy_state.pkl
test/extracted_files/case6/: .tune_metadata  algorithm_state.pkl  rllib_checkpoint.json
test/extracted_files/case6/policies/default_policy/: policy_state.pkl
